maintainIT2/src/objects/Item_Master__c.object
<CustomObject>
    <description>Enterprise Item Master</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Item Master Description - User Defined</description>
        <inlineHelpText>Item Master Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Num__c</fullName>
        <description>Item Master Number - Automatically Generated</description>
        <displayFormat>{000000}</displayFormat>
        <inlineHelpText>Item Master Number - Automatically Generated</inlineHelpText>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Item_Status__c</fullName>
        <label>Item Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Item Master Manufacturer - Lookup from Account where Manufacturer = True</description>
        <inlineHelpText>Item Master Manufacturer - Lookup from Account where Manufacturer = True</inlineHelpText>
        <label>Manufacturer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Manufacturer__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Select an Account to specify as the Item Master Manufacturer</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Item Master</relationshipLabel>
        <relationshipName>Item_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mfg_Part__c</fullName>
        <description>Manufacturer Part Number</description>
        <inlineHelpText>Manufacturer Part Number</inlineHelpText>
        <label>Mfg Part #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nameplate_Data__c</fullName>
        <description>The Nameplate Data field allows you to enter up to 255 characters of information about the part on separate lines.</description>
        <inlineHelpText>The Nameplate Data field allows you to enter up to 255 characters of information about the part on separate lines.</inlineHelpText>
        <label>Nameplate Data</label>
        <type>TextArea</type>
    </fields>
    <label>Item Master</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Master ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>